<?xml version="1.0"?>
<package format="3">
  <name>g34_first_flight</name>
  <version>0.0.1</version>
  <description>PX4 offboard first autonomous hop + tuning sequences for PLEUAV</description>

  <maintainer email="you@example.com">Yo</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
